2011-11-21  Miloslav Trmač  <mitr@redhat.com>

	* gsmclient.h (gsm_client_get_id)
	* gsmclient.c (gsm_client_get_id): Replace deprecated G_CONST_RETURN
	by explicit `const'.

2011-10-03  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.108.
	* NEWS: Update.
	* po/*: Update.

2011-09-19  Miloslav Trmač  <mitr@redhat.com>

	* userhelper.c (die): New function.
	(fail_exit, become_super_supplementary_groups)
	(become_super_other, become_super, become_normal)
	(get_invoking_user, get_user_for_auth, chfn, wrap, main): Use die()
	instead of exit().  New parameter `data' where necessary, all users
	updated.
	(wrap): Process GUI and NOXOPTION before other options that refer to
	die().
	* Makefile.am (userhelper_LDADD): Link with liblib.a.

	* userhelper.c (struct app_data): New member conv.
	(pipe_conv_exec_start, pipe_conv_exec_fail, passwd, chfn, wrap): Use
	struct app_data, not struct pam_conv, as the primary context variable.
	All users updated.
	(main): Use app_data.conv instead of the separate conv variable.

	* userhelper-messages.c
	* userhelper-messages.h: New files.
	* userhelper-wrap.c (userhelper_parse_exitstatus): Use
	uh_existatus_message().
	* po/POTFILES.in: Add userhelper-messages.c.
	* Makefile.am (liblib_a_SOURCES): Add userhelper-messages.c and
	userhelper-messages.h.

	* Makefile.am (noinst_LIBRARIES): Replace libuh-dialogs.a and
	libuh-wrap.a with a single liblib.a.
	(userinfo_LDADD, usermount_LDADD, userpasswd_LDADD)
	(consolehelper_gtk_LDADD, test_userdialog_LDADD): Use liblib.a instead
	of libuh-wrap.a and libuh-dialogs.a.
	(liblib_a_SOURCES, liblib_a_CPPFLAGS): New definitions, replacing...
	(libuh_wrap_a_SOURCES, libuh_wrap_a_CPPFLAGS)
	(libuh_dialogs_a_SOURCES): ... these removed definitions.

2011-09-17  Miloslav Trmač  <mitr@redhat.com>

	* Makefile.am (noinst_LIBRARIES, libuh_wrap_a_SOURCES)
	(libuh_wrap_a_CPPFLAGS, libuh_dialogs_a_SOURCES): Define new convenience
	libraries to avoid duplicate compliation.